--- a/DLife/Info.plist
+++ b/DLife/Info.plist
@@ -20,12 +20,22 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>在背景取得您的位置，以便提供運動軌跡記錄功能</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>在背景取得您的位置，以便提供運動軌跡記錄功能</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>在背景取得您的位置，以便提供運動軌跡記錄功能</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
